# markdown-footnote-sorter

./: .gitignore  .markdownlint-cli2.yaml  .yamllint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  fnsort.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml
tests/: test_footnote_sorting.py
tests/adjacent/: adjacent.md  adjacent_expected.md  adjacent_spacing.md
tests/default/: example.md  example_expected.md  example_sorted.md
tests/duplicates/: duplicates.md  duplicates_expected.md  duplicates_sorted.md
tests/fn_must_be_last/: must_be_last.md  must_be_last_expected.md  must_be_last_sorted.md
tests/keep_fn_names/: keep_fn_names.md  keep_fn_names_expected.md
tests/missing/: .markdownlint-cli2.yaml  missing.md
